# markpdf

./: .envrc  .pre-commit-config.yaml  .yamllint.yml  Agents.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: general.mdc
skills/markpdf/: SKILL.md
src/markpdf/: __init__.py  cli.py  parser.py  renderer.py  themes.py
tests/: test_markpdf.py
tests/fixtures/: blockquotes.md  code_blocks.md  extended_formatting.md  frontmatter.md  headers.md  horizontal_rules.md  images.md  inline_formatting.md  lists.md  showcase.md  tables.md
