[project]
name = "markpdf"
version = "0.2.0"
description = "Agent-friendly markdown to PDF. Beautiful docs from the terminal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "reportlab>=4.0",
    "Pillow>=10.0",
    "aiohttp>=3.9",
    "aiofiles>=24.0",
    "typer>=0.12",
]

[project.optional-dependencies]
fast = ["uvloop>=0.19"]
dev = [
    "ruff>=0.6.3",
    "prek>=0.3.1",
    "pytest",
    "pytest-asyncio<0.23",
    "pytest-cov",
    "ty>=0.0.15",
    "uvloop>=0.19",
]

[project.scripts]
markpdf = "markpdf.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markpdf"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
line_length = 80
include_trailing_comma = true
multi_line_output = 3

[tool.ruff]
select = ["E", "F", "B"]
exclude = ["__pycache__", ".git", ".venv"]
ignore = ["E501"]
